Add search dialog

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,202 +80,9 @@
         android:background="@color/white"
         />
 
-    <View
-        android:id="@+id/fade_out_mask"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/fragment_container"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
-        app:layout_constraintLeft_toLeftOf="@id/fragment_container"
-        app:layout_constraintRight_toRightOf="@id/fragment_container"
-        android:alpha=".85"
-        android:visibility="gone"
-        android:background="#FFFFFF"
-        android:elevation="5dp"
-        android:clickable="true"
-        android:focusable="true"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add"
-        app:fabSize="normal"
-        app:backgroundTint="@color/colorPrimary"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/long_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/fab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_turtle"
-        app:fabSize="mini"
-        app:backgroundTint="@color/colorPrimary"
-        android:visibility="gone"
-        />
-    <TextView
-        android:id="@+id/long_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Correspondence"
-        app:layout_constraintRight_toLeftOf="@id/long_fab"
-        app:layout_constraintTop_toTopOf="@id/long_fab"
-        app:layout_constraintBottom_toBottomOf="@id/long_fab"
-        android:alpha="0"
-        android:elevation="6dp"
-        android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/normal_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/long_fab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_clock"
-        android:tint="@color/white"
-        app:fabSize="mini"
-        app:backgroundTint="@color/colorPrimary"
-        android:visibility="gone"
-        />
-    <TextView
-        android:id="@+id/normal_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Normal"
-        app:layout_constraintRight_toLeftOf="@id/normal_fab"
-        app:layout_constraintTop_toTopOf="@id/normal_fab"
-        app:layout_constraintBottom_toBottomOf="@id/normal_fab"
-        android:alpha="0"
-        android:elevation="6dp"
-        android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/blitz_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/normal_fab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_blitz"
-        app:fabSize="mini"
-        app:backgroundTint="@color/colorPrimary"
-        android:visibility="gone"
-        />
-    <TextView
-        android:id="@+id/blitz_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Blitz"
-        app:layout_constraintRight_toLeftOf="@id/blitz_fab"
-        app:layout_constraintTop_toTopOf="@id/blitz_fab"
-        app:layout_constraintBottom_toBottomOf="@id/blitz_fab"
-        android:alpha="0"
-        android:elevation="6dp"
-        android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
-        />
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/large_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/fab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_l"
-        app:fabSize="mini"
-        app:backgroundTint="@color/colorPrimary"
-        android:visibility="gone"
-        />
-    <TextView
-        android:id="@+id/large_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="19x19"
-        app:layout_constraintRight_toLeftOf="@id/large_fab"
-        app:layout_constraintTop_toTopOf="@id/large_fab"
-        app:layout_constraintBottom_toBottomOf="@id/large_fab"
-        android:alpha="0"
-        android:elevation="6dp"
-        android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/medium_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/large_fab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_m"
-        android:tint="@color/white"
-        app:fabSize="mini"
-        app:backgroundTint="@color/colorPrimary"
-        android:visibility="gone"
-        />
-    <TextView
-        android:id="@+id/medium_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="13x13"
-        app:layout_constraintRight_toLeftOf="@id/medium_fab"
-        app:layout_constraintTop_toTopOf="@id/medium_fab"
-        app:layout_constraintBottom_toBottomOf="@id/medium_fab"
-        android:alpha="0"
-        android:elevation="6dp"
-        android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/small_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/medium_fab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_s"
-        app:fabSize="mini"
-        app:backgroundTint="@color/colorPrimary"
-        android:visibility="gone"
-        />
-    <TextView
-        android:id="@+id/small_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="9x9"
-        app:layout_constraintRight_toLeftOf="@id/small_fab"
-        app:layout_constraintTop_toTopOf="@id/small_fab"
-        app:layout_constraintBottom_toBottomOf="@id/small_fab"
-        android:alpha="0"
-        android:elevation="6dp"
-        android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
+    <io.zenandroid.onlinego.newchallenge.NewChallengeView
+        android:id="@+id/new_challenge"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         />
 </android.support.constraint.ConstraintLayout>
