--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,12 +12,17 @@
     <color name="loginBackground">@color/colorPrimary</color>
 
     <color name="white">#FFFFFF</color>
-    <color name="colorPrimary">#77BAE6</color>
+    <color name="colorPrimary">#79b3e4</color>
     <color name="colorPrimaryLight">#E5F0FF</color>
     <color name="colorPrimaryDark">#2588c9</color>
-    <color name="colorAccent">#F78686</color>
+    <color name="colorAccent">#ed7861</color>
     <color name="colorOffWhite">#F2F7FF</color>
 
+    <color name="color_type_info">#79b3e4</color>
+    <color name="color_type_help">#e8bd4b</color>
+    <color name="color_type_wrong">#ed7861</color>
+    <color name="color_type_warning">#e8bd4b</color>
+    <color name="color_type_success">#90b06e</color>
     <!--<color name="white">#FFFFFF</color>-->
     <!--<color name="colorPrimary">#7AC795</color>-->
     <!--<color name="colorPrimaryLight">#8DDCAD</color>-->
