--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -152,7 +152,7 @@
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:background="#FFAB40"
+            android:background="@color/color_type_warning"
             android:visibility="gone"
             android:clickable="true"
             android:focusable="true"
