--- a/app/src/main/res/layout/item_game_card.xml
+++ b/app/src/main/res/layout/item_game_card.xml
@@ -11,6 +11,7 @@
     android:layout_marginTop="8dp"
     app:cardElevation="1dp"
     app:cardCornerRadius="5dp"
+    app:cardBackgroundColor="@color/white"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,20 +19,19 @@
         android:orientation="horizontal"
         >
         <View
-            android:layout_width="5dp"
+            android:layout_width="6dp"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
             />
         <android.support.v7.widget.CardView
             android:id="@+id/board_card"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             app:cardCornerRadius="2dp"
             app:cardElevation="3dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             app:cardPreventCornerOverlap="false"
             >
             <io.zenandroid.onlinego.views.BoardView
@@ -40,14 +40,119 @@
                 android:layout_height="wrap_content"
                 />
         </android.support.v7.widget.CardView>
-        <View
-            android:layout_width="1px"
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black"
-            android:alpha=".15"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            />
+            android:orientation="vertical"
+            android:layout_marginLeft="25dp"
+            >
+
+            <LinearLayout
+                android:id="@+id/first_row"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="10dp"
+                android:gravity="right"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_default="wrap"
+                >
+
+                <TextView
+                    android:id="@+id/opponent_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/ubuntu_medium"
+                    android:gravity="left"
+                    android:maxLines="1"
+                    android:textSize="16sp"
+                    tools:text="MrAlex"
+                    android:textColor="@color/colorTextSecondary"
+                    />
+
+                <TextView
+                    android:id="@+id/opponent_rank"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:fontFamily="@font/ubuntu"
+                    android:textSize="12sp"
+                    tools:text="14k"
+                    android:textColor="@color/colorTextSecondary"
+                    />
+
+                <android.support.text.emoji.widget.EmojiAppCompatTextView
+                    android:id="@+id/opponent_flag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:textSize="14sp"
+                    android:layout_gravity="center_vertical"
+                    />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/color"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/ubuntu_medium"
+                android:textColor="@color/colorTextSecondary"
+                android:textSize="12sp"
+                />
+
+            <TextView
+                android:id="@+id/color_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha=".7"
+                android:fontFamily="@font/ubuntu_condensed_regular"
+                android:text="You Play"
+                android:textAllCaps="true"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toTopOf="@id/color"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:textColor="@color/colorTextSecondary"
+                />
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1 day"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/time_label"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/ubuntu_medium"
+                android:textColor="@color/colorTextSecondary"
+                android:textSize="12sp"
+
+                />
+
+            <TextView
+                android:id="@+id/time_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha=".7"
+                android:fontFamily="@font/ubuntu_condensed_regular"
+                android:text="Time Left"
+                android:textAllCaps="true"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toTopOf="@id/time"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="20dp"
+                android:textColor="@color/colorTextSecondary"
+                />
+        </android.support.constraint.ConstraintLayout>
     </LinearLayout>
 
 
