--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -49,7 +49,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="@font/kanit_semibold"
+            android:fontFamily="@font/ubuntu_bold"
             android:gravity="left"
             android:maxLines="1"
             android:textSize="16sp"
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:fontFamily="@font/kanit"
+            android:fontFamily="@font/ubuntu"
             android:textSize="12sp"
             tools:text="(14k)" />
 
