--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,9 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/kanit</item>
         <item>@font/kanit_semibold</item>
+        <item>@font/ubuntu</item>
+        <item>@font/ubuntu_bold</item>
+        <item>@font/ubuntu_condensed_regular</item>
+        <item>@font/ubuntu_medium</item>
     </array>
 </resources>
