--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -3,27 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="1dp"
-        app:layout_constraintBottom_toBottomOf="@id/white_details"
-        app:layout_constraintLeft_toLeftOf="@id/black_details"
-        app:layout_constraintRight_toRightOf="@id/black_details"
-        app:layout_constraintTop_toTopOf="@id/black_details"
-        />
+    android:background="@color/white">
 
     <io.zenandroid.onlinego.views.PlayerDetailsView
         android:id="@+id/black_details"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_height="0dp"
         android:elevation="2dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/board_container"
         />
 
@@ -32,7 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:cardCornerRadius="4dp"
-        app:cardElevation="2dp"
+        app:cardElevation="4dp"
+        app:cardBackgroundColor="@color/white"
         app:layout_constraintBottom_toTopOf="@id/play_controls"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toTopOf="parent"
@@ -48,115 +36,119 @@
     <io.zenandroid.onlinego.views.PlayerDetailsView
         android:id="@+id/white_details"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_height="0dp"
         android:elevation="2dp"
         app:layout_constraintTop_toBottomOf="@+id/board_container"
+        app:layout_constraintBottom_toTopOf="@id/play_controls"
         />
 
-    <LinearLayout
-        android:id="@+id/play_controls"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:id="@+id/play_controls"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/white"
-        android:elevation="4dp"
         android:visibility="invisible"
+        app:cardBackgroundColor="@color/white"
+        app:cardElevation="6dp"
         >
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/discard_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_cancel"
-            app:tint="#000000"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="?selectableItemBackground"
-            android:visibility="gone"
-            android:clickable="true"
-            android:focusable="true"
-            />
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/resign_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_flag"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="?selectableItemBackground"
-            />
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/pass_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_pass"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="?selectableItemBackground"
-            />
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/chat_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_chat_bubble"
-            app:tint="@color/disable_black"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="?selectableItemBackground"
-            />
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/previous_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_navigate_previous"
-            app:tint="@color/disable_black"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="?selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            />
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_navigate_next"
-            app:tint="@color/disable_black"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="?selectableItemBackground"
-            />
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/auto_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_magic_wand"
-            app:tint="@color/disable_black"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="?selectableItemBackground"
-            />
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/confirm_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_done_24dp"
-            android:layout_weight="1"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="@color/color_type_warning"
-            android:visibility="gone"
-            android:clickable="true"
-            android:focusable="true"
-            />
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            >
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/discard_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_cancel"
+                app:tint="#000000"
+                android:layout_weight="1"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="?selectableItemBackground"
+                android:visibility="gone"
+                android:clickable="true"
+                android:focusable="true"
+                />
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/resign_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_flag"
+                android:layout_weight="1"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="?selectableItemBackground"
+                />
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/pass_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_pass"
+                android:layout_weight="1"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="?selectableItemBackground"
+                />
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/chat_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_chat_bubble"
+                app:tint="@color/disable_black"
+                android:layout_weight="1"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="?selectableItemBackground"
+                />
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/previous_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_navigate_previous"
+                app:tint="@color/disable_black"
+                android:layout_weight="1"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="?selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                />
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/next_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_navigate_next"
+                app:tint="@color/disable_black"
+                android:layout_weight="1"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="?selectableItemBackground"
+                />
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/auto_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_magic_wand"
+                app:tint="@color/disable_black"
+                android:layout_weight="1"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="?selectableItemBackground"
+                />
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/confirm_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_done_24dp"
+                android:layout_weight="1"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@color/color_type_warning"
+                android:visibility="gone"
+                android:clickable="true"
+                android:focusable="true"
+                />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
