--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,88 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/loginBackground"
-    android:id="@+id/container"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/online_go_prerender"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="48dp"
-        android:layout_marginTop="40dp"
-        android:layout_weight="1"
-        />
-    <android.support.design.widget.TextInputLayout
+    android:fillViewport="true"
+    >
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:theme="@style/LoginLabel"
-        android:id="@+id/input_username_layout"
-        android:visibility="gone"
-        >
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/input_username"
+        android:id="@+id/container"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:orientation="vertical">
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            />
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/online_go_prerender"
+            android:layout_gravity="center_horizontal"
+            />
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:hint="User"
-            android:textColor="@color/white"
-            />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:theme="@style/LoginLabel"
+            android:id="@+id/input_username_layout"
+            android:visibility="gone"
+            tools:visibility="visible"
+            >
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/input_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="Username"
+                android:textColor="@color/white"
+                />
+        </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:theme="@style/LoginLabel"
-        android:id="@+id/input_password_layout"
-        android:visibility="gone"
-        >
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/input_password"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="Password"
-            android:textColor="@color/white"
-            android:textColorHighlight="@color/white"
-            android:textColorHint="@color/white"
-            />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:theme="@style/LoginLabel"
+            android:id="@+id/input_password_layout"
+            android:visibility="gone"
+            tools:visibility="visible"
+            >
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/input_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="Password"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/white"
+                android:textColorHint="@color/white"
+                />
+        </android.support.design.widget.TextInputLayout>
 
-    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Login"
-        android:textColor="@color/colorPrimary"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/button_shape_default_rounded"
-        app:spinning_bar_color="@color/colorPrimary"
-        app:spinning_bar_width="4dp"
-        app:spinning_bar_padding="4dp"
-        app:initialCornerAngle="50dp"
-        app:finalCornerAngle="50dp"
-        android:enabled="false"
-        android:visibility="gone"
-    />
-    <TextView
-        android:id="@+id/version"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        tools:text="v0.0.0"
-        android:textColor="@color/colorPrimaryLight"
-        />
-</LinearLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:theme="@style/LoginLabel"
+            android:id="@+id/input_email_layout"
+            android:visibility="gone"
+            tools:visibility="visible"
+            >
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/input_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="Email (optional)"
+                android:textColor="@color/white"
+                />
+        </android.support.design.widget.TextInputLayout>
+
+        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/login_to_ogs"
+            android:textColor="@color/colorPrimary"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/button_shape_default_rounded"
+            app:spinning_bar_color="@color/colorPrimary"
+            app:spinning_bar_width="4dp"
+            app:spinning_bar_padding="4dp"
+            app:initialCornerAngle="50dp"
+            app:finalCornerAngle="50dp"
+            android:enabled="false"
+            android:visibility="gone"
+            tools:visibility="visible"
+            />
+        <TextView
+            android:id="@+id/no_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/create_account_prompt"
+            android:textColor="@color/colorPrimaryLight"
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:clickable="true"
+            android:focusable="true"
+            />
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
+</ScrollView>
