--- a/app/src/main/res/layout/item_game_card.xml
+++ b/app/src/main/res/layout/item_game_card.xml
@@ -8,7 +8,8 @@
     android:orientation="horizontal"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
     app:cardElevation="1dp"
     app:cardCornerRadius="5dp"
     app:cardBackgroundColor="@color/white"
