--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="colorPrimaryLight">#E5F0FF</color>
     <color name="colorPrimaryDark">#2588c9</color>
     <color name="colorAccent">#ed7861</color>
-    <color name="colorOffWhite">#F2F7FF</color>
+    <color name="colorOffWhite">#F2F4F7</color>
 
     <color name="color_type_info">#79b3e4</color>
     <color name="color_type_help">#e8bd4b</color>
